--- a/wallet-service/src/main/resources/application.properties
+++ b/wallet-service/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.port=8082
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.client.register-with-eureka=true
+eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.application.name=wallet-service
