--- a/service-registry/Dockerfile
+++ b/service-registry/Dockerfile
@@ -1,4 +1,5 @@
-FROM ubuntu:latest
+FROM openjdk:17
 LABEL authors="Bijan Ghanei"
-
-ENTRYPOINT ["top", "-b"]
+COPY target/service-registry-0.0.1-SNAPSHOT.jar service-registry.jar
+EXPOSE 8761
+ENTRYPOINT ["java", "-jar","/service-registry.jar"]
