--- a/transaction-service/Dockerfile
+++ b/transaction-service/Dockerfile
@@ -1,4 +1,5 @@
-FROM ubuntu:latest
+FROM openjdk:17
 LABEL authors="Bijan Ghanei"
-
-ENTRYPOINT ["top", "-b"]
+COPY target/wallet-service-0.0.1-SNAPSHOT.jar wallet-service.jar
+EXPOSE 8081
+ENTRYPOINT ["java", "-jar","/wallet-service.jar"]
