--- a/transaction-service/Dockerfile
+++ b/transaction-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17
 LABEL authors="Bijan Ghanei"
-COPY target/wallet-service-0.0.1-SNAPSHOT.jar wallet-service.jar
+COPY target/transaction-service-0.0.1-SNAPSHOT.jar transaction-service.jar
 EXPOSE 8081
-ENTRYPOINT ["java", "-jar","/wallet-service.jar"]
+ENTRYPOINT ["java", "-jar","/transaction-service.jar"]
