--- a/transaction-service/src/main/resources/application.properties
+++ b/transaction-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/transaction-service
-spring.datasource.username=myrestapi
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:33062/transactions
+spring.datasource.username=root
+spring.datasource.password=very_secret
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 server.port=8081
