--- a/transaction-service/src/main/resources/application.properties
+++ b/transaction-service/src/main/resources/application.properties
@@ -1,12 +1,31 @@
+spring.application.name=transaction-service
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:33062/transactions
 spring.datasource.username=root
 spring.datasource.password=very_secret
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-server.port=8081
+server.port=0
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-spring.application.name=transaction-service
+eureka.instance.prefer-ip-address=true
+
+
+
+#Zipkin
+management.tracing.sampling.probability=1.0
+
+#Resilience4j
+resilience4j.circuitbreaker.instances.transactionBreaker.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.transactionBreaker.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.transactionBreaker.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.transactionBreaker.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.instances.transactionBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.transactionBreaker.register-health-indicator=true
+
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
