--- a/wallet-service/src/main/resources/application.properties
+++ b/wallet-service/src/main/resources/application.properties
@@ -1,12 +1,21 @@
+spring.application.name=wallet-service
+
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:33061/wallets
 spring.datasource.username=root
 spring.datasource.password=very_secret
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-server.port=8082
+server.port=0
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-spring.application.name=wallet-service
+eureka.instance.prefer-ip-address=true
+
+
+#Zipkin
+
+# trace every request is being made in our application
+management.tracing.sampling.probability=1.0
