transaction rate limiter addded

--- a/transaction-service/src/main/resources/application.properties
+++ b/transaction-service/src/main/resources/application.properties
@@ -18,13 +18,20 @@ eureka.instance.prefer-ip-address=true
 #Zipkin
 management.tracing.sampling.probability=1.0
 
-#Resilience4j
+#Resilience4j - Circuit Breaker
 resilience4j.circuitbreaker.instances.transactionBreaker.permittedNumberOfCallsInHalfOpenState=3
 resilience4j.circuitbreaker.instances.transactionBreaker.minimumNumberOfCalls=5
 resilience4j.circuitbreaker.instances.transactionBreaker.slidingWindowSize=10
 resilience4j.circuitbreaker.instances.transactionBreaker.waitDurationInOpenState=10000
 resilience4j.circuitbreaker.instances.transactionBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
 resilience4j.circuitbreaker.instances.transactionBreaker.register-health-indicator=true
+
+#Resilience4j - Rate Limiter
+resilience4j.ratelimiter.instances.transactionRateLimiter.timeout-duration=0
+resilience4j.ratelimiter.instances.transactionRateLimiter.limit-refresh-period=4
+resilience4j.ratelimiter.instances.transactionRateLimiter.limit-for-period=2
+
+
 
 management.health.circuitbreakers.enabled=true
 management.endpoints.web.exposure.include=health
