b-bank-001-messagequeue structured notif microservice and rabbitmq

--- a/transaction-service/src/main/resources/application.properties
+++ b/transaction-service/src/main/resources/application.properties
@@ -31,7 +31,11 @@ resilience4j.ratelimiter.instances.transactionRateLimiter.timeout-duration=0
 resilience4j.ratelimiter.instances.transactionRateLimiter.limit-refresh-period=4
 resilience4j.ratelimiter.instances.transactionRateLimiter.limit-for-period=2
 
-
+#RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 management.health.circuitbreakers.enabled=true
 management.endpoints.web.exposure.include=health
