--- a/wallet-service/src/main/resources/application.properties
+++ b/wallet-service/src/main/resources/application.properties
@@ -17,5 +17,11 @@ eureka.instance.prefer-ip-address=true
 
 #Zipkin
 
+#RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 # trace every request is being made in our application
 management.tracing.sampling.probability=1.0
