--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,57 @@
 version: '3'
 services:
-#  service-registry:
-#    build:
-#      context: ./service-registry
-#    ports:
-#      - "8761:8080"
-#    networks:
-#      - b-net
-#  transaction-service:
-#    build:
-#      context: ./transaction-service
-#    ports:
-#      - "8081:8080"
-#    networks:
-#      - b-net
-#  wallet-service:
-#    build:
-#      context: ./wallet-service
-#    ports:
-#      - "8082:8080"
-#    networks:
-#      - b-net
+  gateway:
+    build:
+      context: ./gateway
+    ports:
+      - 8083:8080
+    container_name: gateway
+    networks:
+      - b-net
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+  service-registry:
+    build:
+      context: ./service-registry
+    ports:
+      - 8761:8080
+    container_name: service-registry
+    networks:
+      - b-net
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+  notification-service:
+    build:
+      context: ./notification-service
+    container_name: notification-service
+    networks:
+      - b-net
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+  transaction-service:
+    build:
+      context: ./transaction-service
+    container_name: transactions-service
+    networks:
+      - b-net
+    depends_on:
+      - transactions-db
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+  wallet-service:
+    build:
+      context: ./wallet-service
+    container_name: wallet-service
+    networks:
+      - b-net
+    depends_on:
+      - wallet-db
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
   transactions-db:
     image: mysql:${MYSQL_VERSION:-8.0.22}
-    container_name: transaction-db
-    command: ["--default-authentication-plugin=mysql_native_password"]
+    container_name: transactions-db
+#    command: ["--default-authentication-plugin=mysql_native_password"]
     ports:
       - 33062:3306
     environment:
@@ -39,7 +66,7 @@ services:
   wallet-db:
     image: mysql:${MYSQL_VERSION:-8.0.22}
     container_name: wallet-db
-    command: [ "--default-authentication-plugin=mysql_native_password" ]
+#    command: [ "--default-authentication-plugin=mysql_native_password" ]
     ports:
       - 33061:3306
     environment:
@@ -60,7 +87,7 @@ services:
     depends_on:
       - transactions-db
     environment:
-      - PMA_HOST=transaction-db
+      - PMA_HOST=transactions-db
     networks:
       - b-net
   phpmyadmin-wallets:
