--- a/service-registry/Dockerfile
+++ b/service-registry/Dockerfile
@@ -1,5 +1,5 @@
-FROM openjdk:17
+FROM openjdk:21
 LABEL authors="Bijan Ghanei"
 COPY target/service-registry-0.0.1-SNAPSHOT.jar service-registry.jar
-EXPOSE 8761
+#EXPOSE 8761
 ENTRYPOINT ["java", "-jar","/service-registry.jar"]
