--- a/transaction-service/Dockerfile
+++ b/transaction-service/Dockerfile
@@ -1,5 +1,5 @@
-FROM openjdk:17
+FROM openjdk:21
 LABEL authors="Bijan Ghanei"
 COPY target/transaction-service-0.0.1-SNAPSHOT.jar transaction-service.jar
-EXPOSE 8081
+#EXPOSE 8081
 ENTRYPOINT ["java", "-jar","/transaction-service.jar"]
